syntax = "proto3";

import "proto/api/api.proto";
import "proto/data/article_data.proto";

package proto.api;
option go_package="proto/api";

/// Service
service Article {
  rpc Get(GetArticleRequest) returns (GetArticleResponse) {}
  rpc List(ListArticleRequest) returns (ListArticleResponse) {}
}

// -------------------------------------
// GetArticle
// -------------------------------------
message GetArticleRequest {
  proto.api.RequestHeader header = 1;

  int64 article_id = 2; /// 記事ID
}

message GetArticleResponse {
  proto.api.ResponseHeader header = 1;

  proto.data.ArticleData article_data = 2; /// 記事データ
}

// -------------------------------------
// List
// -------------------------------------
message ListArticleRequest {
  proto.api.RequestHeader header = 1;
}

message ListArticleResponse {
  proto.api.ResponseHeader header = 1;

  repeated proto.data.ArticleData article_data = 2; /// 記事データリスト
}
